--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -8,9 +8,9 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   <dependencies>
     <!-- Dependência para compilar corretamente com RMI -->
     <dependency>
-      <groupId>javax.annotation</groupId>
-      <artifactId>javax.annotation-api</artifactId>
-      <version>1.3.2</version>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.15.0</version>
     </dependency>
   </dependencies>
   <build>
